<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/toolbar"

        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/actionbar_color" >
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="7dp"
            android:background="@mipmap/icon_arrow_left"/>
        <TextView
            android:id="@+id/done_text"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/done"
            android:gravity="center"
            android:enabled="false"
            android:layout_gravity="right"
            android:layout_marginRight="@dimen/margin_text"
            android:background="@null"
            android:textSize="@dimen/text_size_normal"
            android:textColor="@color/white_text_selector"/>
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/folder_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:scrollbars="none" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bar_height"
        android:layout_alignParentBottom="true"
        android:background="@color/bar_grey_90"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/folder_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/margin_layout"
            android:paddingRight="@dimen/margin_layout"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/folder_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_image"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="@dimen/margin_text"
                android:src="@mipmap/ic_arrow" />
        </LinearLayout>
        <TextView
            android:id="@+id/preview_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/margin_layout"
            android:gravity="center"
            android:paddingRight="@dimen/margin_layout"
            android:layout_alignParentRight="true"
            android:enabled="false"
            android:textColor="@color/white_text_selector"
            android:textSize="@dimen/text_size_normal"
            android:text="@string/preview"/>
    </RelativeLayout>

</RelativeLayout>
