<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">
    <include layout="@layout/layout_toolbar" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >
    <ImageView
        android:layout_width="125dp"
        android:layout_height="109dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"

        android:src="@mipmap/pic_logo_r" />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:gravity="center|top"
        android:orientation="vertical"
        android:layout_weight="2"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:layout_marginLeft="27dip"
        android:layout_marginRight="27dip"

        android:background="@mipmap/bg_ze_input"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="22dip"
            android:layout_height="22dp"
            android:layout_marginLeft="7dp"
            android:background="@mipmap/icon_mob" />

        <EditText
            android:id="@+id/editPhone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:background="@null"
            android:digits="0123456789"
            android:hint="@string/reg_xingmingsubject"
            android:maxLength="11"
            android:shadowDx="0.0"
            android:shadowDy="1.0"
            android:shadowRadius="1.0"
            android:singleLine="true"
            android:textColor="@color/text_color"
            android:textColorHint="@color/text_color"
            android:textSize="14sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:layout_marginLeft="27dip"
        android:layout_marginRight="27dip"
        android:layout_marginTop="8dp"
        android:background="@mipmap/bg_ze_input"
        >

        <ImageView
            android:id="@+id/ivinfo"
            android:layout_width="22dip"
            android:layout_height="22dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="7dp"
            android:background="@mipmap/icon_inf" />

        <EditText
            android:id="@+id/edCode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:layout_toRightOf="@+id/ivinfo"
            android:background="@null"
            android:hint="@string/reg_code"
            android:maxLength="11"
            android:shadowDx="0.0"
            android:shadowDy="1.0"
            android:shadowRadius="1.0"
            android:singleLine="true"

            android:textColor="@color/text_color"
            android:textColorHint="@color/text_color"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_getCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="7dp"
            android:text="@string/get_code"
            android:textColor="@color/actionbar_color"
            android:textSize="14sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:layout_marginLeft="27dip"
        android:layout_marginRight="27dip"
        android:layout_marginTop="8dp"
        android:background="@mipmap/bg_ze_input"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="22dip"
            android:layout_height="22dp"
            android:layout_marginLeft="7dp"
            android:background="@mipmap/icon_lock" />

        <EditText
            android:id="@+id/editPass"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:background="@null"
            android:hint="@string/set_pass"
            android:maxLength="11"
            android:shadowDx="0.0"
            android:shadowDy="1.0"
            android:shadowRadius="1.0"
            android:singleLine="true"
            android:textColor="@color/text_color"
            android:textColorHint="@color/text_color"
            android:inputType="textPassword"
            android:textSize="14sp" />
    </LinearLayout>


    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/register_btn_bg"
        android:text="注册"
        android:textColor="@color/base_color_text_white"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="8dp">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:button="@drawable/register_radio_check"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/checkBox"
            android:text="注册即表示同意"
            android:textColor="@color/text_color"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/tv_ehome_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="4dp"
            android:layout_toRightOf="@+id/textView2"
            android:text="《健康E家用户协议》"
            android:textColor="@color/actionbar_color"
            android:textSize="14sp" />



    </RelativeLayout>
        </LinearLayout>
</LinearLayout>
