<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:orientation="vertical" >

    <!-- 普通底部导航 -->

    <LinearLayout
        android:id="@+id/main_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_hight"
        android:background="@color/base_color_text_white"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/layout_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onTabClicked"
            android:padding="3dp" >

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/image_home"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:background="@color/base_color_text_white"
                    android:focusable="false"
                    android:layout_marginTop="2dp"
                    android:scaleType="centerInside"
                    android:src="@mipmap/icon_home_pressed" />

                <TextView
                    android:id="@+id/tv_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/image_home"
                    android:text="@string/tv_home"
                    android:textColor="@color/bottom_text_color_pressed"
                    android:textSize="12sp" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_health"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onTabClicked"
            android:padding="3dp" >

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/img_health"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:background="@color/base_color_text_white"
                    android:focusable="false"
                    android:layout_marginTop="2dp"
                    android:scaleType="centerInside"
                    android:src="@mipmap/icon_jiankang_normal" />

                <TextView
                    android:id="@+id/tv_health"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                   android:layout_below="@+id/img_health"
                    android:text="@string/tv_health"
                    android:textColor="@color/bottom_text_color_normal"
                    android:textSize="12sp" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_private_doctor"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onTabClicked"
            android:padding="3dp" >

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/img_private_doctor"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:background="@color/base_color_text_white"
                    android:focusable="false"
                    android:layout_marginTop="2dp"
                    android:scaleType="centerInside"
                    android:src="@mipmap/icon_private_doctor_normal" />

                <TextView
                    android:id="@+id/tv_private_doctor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/img_private_doctor"
                    android:text="私人医生"
                    android:textColor="@color/bottom_text_color_normal"
                    android:textSize="12sp" />
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/layout_doctor"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onTabClicked"
            android:padding="3dp" >

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/img_doctor"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:background="@color/base_color_text_white"
                    android:focusable="false"
                    android:layout_marginTop="2dp"
                    android:scaleType="centerInside"
                    android:src="@mipmap/icon_msg_normal" />

                <TextView
                    android:id="@+id/tv_doctor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/img_doctor"
                    android:text="@string/tv_msg"
                    android:textColor="@color/bottom_text_color_normal"
                    android:textSize="12sp" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_info"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onTabClicked"
            android:padding="3dp" >

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/img_info"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:background="@color/base_color_text_white"
                    android:focusable="false"
                    android:layout_marginTop="2dp"
                    android:scaleType="centerInside"
                    android:src="@mipmap/icon_myinfo_normal" />

                <TextView
                    android:id="@+id/tv_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                   android:layout_below="@+id/img_info"
                    android:text="@string/tv_info"
                    android:textColor="@color/bottom_text_color_normal"
                    android:textSize="12sp" />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>